swagger updation and routes updation
